--- a/Variant1-2.html
+++ b/Variant1-2.html
@@ -11,7 +11,14 @@
 	</script>
   </head>
   <body> 
-	<p>Если наведете курсор на картинку, - она исчезнет!</p><br>
-	<img id="image" src="landscape.jpg" width="160" height="120">
+	<h3 align="center">Если наведете курсор на нужную картинку, - она исчезнет!</h3>
+	<table align="center" width="200" border="1" cellpadding="5">
+		<tr align="center"><td><b>№</b><td><b>Картинка</b><td><b>Описание</b></td></tr>
+		<tr align="center"><td>1<td><img src="river.jpg" width="200"><td width="300">Очень красивая река</td></tr>
+		<tr align="center"><td>2<td><img src="forest.jpg" width="200"><td>Прекрасный лес</td></tr>
+		<tr align="center"><td>3<td><img id="image" src="lake.jpg" width="200"><td>Великолепное озеро</td></tr>
+	</table>
+	<h3 align="center">А эта картинка вне таблицы:</h3>
+	<p align="center"><img src="landscape.jpg"><br>Может она исчезнет?</p>
   </body>                         
 </html>
